[project]
name = "crewai_invoice_agent"
version = "0.1.0"
description = "crewai-invoice-agent using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.100.1,<1.0.0"
]

[project.scripts]
crewai_invoice_agent = "crewai_invoice_agent.main:run"
run_crew = "crewai_invoice_agent.main:run"
train = "crewai_invoice_agent.main:train"
replay = "crewai_invoice_agent.main:replay"
test = "crewai_invoice_agent.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
